[project]
name = "hello-again"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Markus Pischinger", email = "makupi@icloud.com" }
]
dependencies = [
    "django>=5.0.6",
    "django-extensions>=3.2.3",
    "faker>=25.3.0",
    "django-filter>=24.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["hello_again"]
